--- a/index.html
+++ b/index.html
@@ -16,24 +16,19 @@
 </style>
 <body class="text-white">
     <div class="container text-center">
-        <img src="img/a.png" width="200" height="150" alt="main logo" class="mb-2">
+        <img src="https://larrysul.github.io/Type-n-speak/img/a.png" width="200" height="150" alt="main logo" class="mb-2">
         <h3 > Type - N - Speak </h3>
         <p>designed by - Dev Larry</p>
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form>
                     <div class="form-group">
-                        <textarea id="text-input" class="form-control form-control-lg" placeholder="Type anything"></textarea>
+                        <textarea id="text-input" rows="50" class="form-control form-control-lg" placeholder="Type anything"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="rate">Rate</label>
                         <div id="rate-value" class="badge badge-primary float-right">1</div>
                         <input type="range" id="rate" class="form-control" min="0.5" max="2" value="1" step="0.1">
-                    </div>
-                    <div class="form-group">
-                        <label for="pitch">Pitch</label>
-                        <div id="pitch-value" class="badge badge-primary float-right">1</div>
-                        <input type="range" id="pitch" class="form-control" min="0" max="2" value="1" step="0.1">
                     </div>
                     <div class="form-group">
                         <select id="voice-select" class="form-control"></select>
