--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container text-center">
         <img src="https://larrysul.github.io/Type-n-speak/img/a.png" width="200" height="150" alt="main logo" class="mb-2">
         <h3 > Type - N - Speak </h3>
-        <p>Designed by - Dev Larry</p>
+        <p>designed by - Dev Larry</p>
         <div class="row">
             <div class="col-md-8 mx-auto">
                 <form>
